# duckdb-clickhouse

./: CMakeLists.txt  Makefile  README.md  duckdb_extension.Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: CodeChecks.yml  MainDistributionPipeline.yml  _extension_code_quality.yml
scripts/: setup_clickhouse.sql
src/: CMakeLists.txt  clickhouse_client.cpp  clickhouse_scan.cpp  clickhouse_scanner_extension.cpp  clickhouse_types.cpp  clickhouse_utils.cpp  duckdb_clickhouse_extension.cpp  quack_extension.cpp
src/include/: clickhouse_client.hpp  clickhouse_scan.hpp  clickhouse_scanner_extension.hpp  clickhouse_types.hpp  clickhouse_utils.hpp  duckdb_clickhouse_extension.hpp
src/include/storage/: clickhouse_catalog.hpp  clickhouse_catalog_set.hpp  clickhouse_schema_entry.hpp  clickhouse_schema_set.hpp  clickhouse_storage_extension.hpp  clickhouse_table_entry.hpp  clickhouse_table_set.hpp  clickhouse_transaction.hpp  clickhouse_transaction_manager.hpp
src/storage/: CMakeLists.txt  clickhouse_catalog.cpp  clickhouse_catalog_set.cpp  clickhouse_schema_entry.cpp  clickhouse_schema_set.cpp  clickhouse_storage_extension.cpp  clickhouse_table_entry.cpp  clickhouse_table_set.cpp  clickhouse_transaction.cpp  clickhouse_transaction_manager.cpp
test/sql/: clickhouse_catalog.test  duckdb_clickhouse.test
vcpkg_ports/clickhouse-cpp/: portfile.cmake  vcpkg.json
